--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,20 @@
 spring.application.name=crud-estudiantes-spring-mvc
+
+# Credenciales para el acceso a la base de datos
+
+spring.datasource.url=jdbc:mysql://localhost:3306/crud-estudiantes-spring-mvc
+spring.datasource.username=root
+spring.datasource.password=Temp2025
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# Configuracion para Hibernate (ORM) (Object Relational Mapping) 
+# Es un componente que permite hacer consultas a las entidades
+# Las entidades son las clases de Java, anotadas con la anotacion @Entity,
+# que estan mapeadas o relacionadas con las tablas
+# de la base de datos.
+# Hibernate traduce las consultas a las entidades, a consultas SQL que envia al motor (engine) de 
+# base de datos.
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.show-sql=true
+
