imagen dle estudiante agregada

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,11 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 
+
+# Para subir una imagen al servidor web (Apache Tomcat),
+# hay que especificar el tamaño de cada trozo (chunk), porque el archivo se sube en partes, no 
+# todo de una sola vez, y tambien hay que especificar el tamaño total que puede tener un archivo
+# para ser subido al servidor
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+server.tomcat.max-part-count=30
